--- a/values.yaml
+++ b/values.yaml
@@ -15,13 +15,16 @@ ingress:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
   hosts:
-    - host: mobsf.loc.com
+    - host: mobsf.lab.lan
       paths:
         - path: /
           pathType: Prefix
   tls:
     enabled: true
-    secretName: mobsf-tls
+    secrets:
+      - secretName: mobsf-tls
+        hosts:
+          - mobsf.lab.lan
 
 persistence:
   enabled: true
